@@ -1,3 +1,8 @@
+Mon Jan 17 14:21:09 2000  George Lebl <jirka@5z.com>
+
+	* gnome-ditem.c: test for gnome-terminal's existence and fall back
+	  to xterm otherwise
+
 Sun Jan 16 02:43:14 2000  George Lebl <jirka@5z.com>
 
 	* gnome-ditem.[ch]: Add a basic "Type" attribute to the structure and
